[CIVIC-1077] Fixed TOC width on mobile.

--- a/docroot/themes/contrib/civictheme/civictheme_library/components/02-molecules/table-of-contents/table-of-contents.scss
+++ b/docroot/themes/contrib/civictheme/civictheme_library/components/02-molecules/table-of-contents/table-of-contents.scss
@@ -5,9 +5,13 @@
 .ct-table-of-contents {
   $root: &;
 
-  width: max-content;
-  max-width: $ct-table-of-contents-max-width;
-  min-width: $ct-table-of-contents-min-width;
+  width: 100%;
+
+  @include ct-breakpoint('m') {
+    width: max-content;
+    max-width: $ct-table-of-contents-max-width;
+    min-width: $ct-table-of-contents-min-width;
+  }
 
   &--position-before,
   &--position-prepend {
